Atualizações nos arquivos index.html e scripts.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>🎄 Feliz Natal! 🎄</h1>
+    <h1>🎄 Feliz Natal do Dudu!! 🎄</h1>
     <img id="imagem" src="imagens/gato1.jpg" alt="Natal" />
 
     <button id="botao" onclick="iniciarMusicaETrocarImagens()">Clique para começar a festa!</button>
