--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <button id="botaoSurpresa" onclick="mostrarSurpresa()">Clique aqui para a surpresa de Natal 👿</button>
 
     <div class="gif-container">
-        <img id="gif1" src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWxpdmppaTNmdGkydmFzaXhsZmhnc3h0M2Fkd3JoY2g5aHJyNGJ4cyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GeimqsH0TLDt4tScGw/giphy.webp" alt="Surpresa Dudu" />
-        <img id="gif2" src="https://media1.tenor.com/m/-qBsG1HwR4oAAAAd/cat-dance-dancing-cat.gif" alt="Dancing Cat" />
+        <img id="gif1" src="imagens/Ro818_.gif" alt="Surpresa Dudu" />
+        <img id="gif2" src="imagens/tenor.gif" alt="Dancing Cat" />
     </div>
 
     <p id="mensagem">Feliz Natal do Dudu! Se você recebeu este link, significa que você é muito especial e ele agradece por mais um ano junto dele! 🎉</p>
