--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feliz Natal!</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link para o arquivo CSS -->
-</head>
+    <link rel="stylesheet" href="styles.css">
 <body>
 
     <h1>🎄 Feliz Natal do Dudu!! 🎄</h1>
@@ -25,7 +24,7 @@
 
     <p id="mensagem">Feliz Natal do Dudu! Se você recebeu este link, significa que você é muito especial e ele agradece por mais um ano junto dele! 🎉</p>
 
-    <script src="scripts.js"></script> <!-- Link para o arquivo JS -->
+    <script src="scripts.js"></script> 
 
 </body>
 </html>
